# SensorsInfoWithSerial

./: .gitignore
DataBase/: README.txt  Struct-DB.mwb.bak  Struct-DB.mwb.beforefix
Proj/: CMakeLists.txt  README.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
